<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<com.google.android.material.textview.MaterialTextView
    android:id="@+id/hint"
    android:layout_margin="10dp"
    android:text="@string/pipe_lengthening"
    android:textSize="12sp"
    android:textColor="@color/primary_text_color"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText
        android:inputType="numberSigned"
        android:textSize="12sp"
        android:id="@+id/amount_of_lengthening"
        android:layout_margin="10dp"
        android:textColor="@color/primary_text_color"
        android:hint="@string/inter_your_number_in_mm"
        app:layout_constraintTop_toBottomOf="@id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:layout_margin="10dp"
        android:id="@+id/save"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/amount_of_lengthening"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/gray"
        android:layout_margin="10dp"
        android:id="@+id/cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/amount_of_lengthening"
        app:layout_constraintStart_toEndOf="@id/save"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>