<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.calculate.CalculateActivity">
    <com.google.android.material.textfield.TextInputLayout
        app:errorEnabled="false"
        app:errorTextColor="@color/red"
        android:id="@+id/pipe_code_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:outlineSpotShadowColor="@color/purple_700"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pipe_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pipe_code"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:errorEnabled="false"
        app:errorTextColor="@color/red"
        android:id="@+id/b1Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:outlineSpotShadowColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/pipe_code_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/the_length_of_pipe_top"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/b2Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:outlineSpotShadowColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/b1Layout">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/horizontal_distance"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/b3Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:outlineSpotShadowColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/b2Layout">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pillar_top_until_flange"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/b4Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:outlineSpotShadowColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/b3Layout">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/b4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/top_of_the_pillar"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/b5Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:outlineSpotShadowColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/b4Layout">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:maxLength="5"
            android:id="@+id/b5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bottom_of_the_pipe_until_pillar"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="30dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/b5Layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toTopOf="@id/divider" />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_length_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/total_length"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_length_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="---"
        android:textColor="@color/primary_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/total_length_title"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/degree_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/angle_degree"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_length_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/degree_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="---"
        android:textColor="@color/primary_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/degree_title"
        app:layout_constraintTop_toBottomOf="@id/total_length_result" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hypotenuse_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hypotenuse_length"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/degree_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hypotenuse_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="---"
        android:textColor="@color/primary_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/hypotenuse_title"
        app:layout_constraintTop_toBottomOf="@id/degree_result" />
    <com.google.android.material.button.MaterialButton
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:id="@+id/add_to_list"
        android:text="@string/add_to_list"
        app:layout_constraintTop_toBottomOf="@id/hypotenuse_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:id="@+id/show_list"
        android:text="@string/show_list"
        app:layout_constraintTop_toBottomOf="@id/add_to_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>