<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/setting"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_settings_24"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"/>
        <com.google.android.material.textview.MaterialTextView
            android:paddingStart="10dp"
            android:id="@+id/language"
            app:layout_constraintBaseline_toTopOf="parent"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/Language"
            android:textColor="@color/primary_text_color"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/TrasfoIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/transfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfoTitle"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TrasfoIcon" />
    <com.google.android.material.card.MaterialCardView
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/itemCard"
        android:layout_width="0dp"
        android:outlineProvider="background"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toStartOf="@id/normalCard"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:gravity="center"
            android:id="@+id/itemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/item"
            android:textColor="@color/primary_text_color"
            android:textSize="20sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/normalCard"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/itemCard"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:gravity="center"
            android:id="@+id/normalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/normal"
            android:textColor="@color/primary_text_color"
            android:textSize="20sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restart"
        android:text="@string/restart_project"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normalCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>